--- a/ewm.1
+++ b/ewm.1
@@ -5,6 +5,7 @@ ewm \- Minimalist Window Manager for X
 \fBewm\fP
 [ \fB\-display\fP \fIdisplay\fP ]
 [ \fB\-term\fP \fItermprog\fP ]
+[ \fB\-launch\fP \fIlaunchprog\fP ]
 [ \fB\-fn\fP \fIfontname\fP ]
 [ \fB\-fg\fP \fIforeground-colour\fP ]
 [ \fB\-fc\fP \fIfixed-colour\fP ]
